--- a/options.html
+++ b/options.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Think Help Desk Options</title>
+    <title>Dumas Help Desk Options</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/options.css" rel="stylesheet">
 
