--- a/popup.html
+++ b/popup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Think Help Desk</title>
+	<title>Dumas ISD Help Desk</title>
 
 	<!-- Scripts -->
 	<script src="js/jquery.min.js"></script>
