--- a/popup.html
+++ b/popup.html
@@ -17,9 +17,9 @@
 	<div class="panel panel-default">
 		<div class="panel-body">
 			<div id="schoolAlert" class="alert alert-danger hidden">
-			  Please visit Options to set your default school.
+			  If needed attach screenshot or recording to work ticket.
 			</div>
-			<a id="helpDesk" class="btn btn-block btn-primary"><i class="fa fa-life-ring"></i> Submit Ticket</a>
+			<a id="helpDesk" class="btn btn-block btn-primary"><i class="fa fa-life-ring"></i> Submit Work Ticket</a>
 			<a id="takeScreenshot" class="btn btn-block btn-primary"><i class="fa fa-desktop"></i> Take Screenshot</a>
 			<a id="startScreenRecording" class="btn btn-block btn-primary"><i class="fa fa-video-camera"></i> Start Screen Recording</a>
 			<p class="text-muted">Hint: When recording, click <b>Stop sharing</b> to finish</p>
